--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "Shop_From_Home",
+  "name": "mernbackend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14",
+    "pug": "^3.0.2"
   }
 }
